pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
  labels:
    app: homework-app
spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: homework-app
  template:
    metadata:
      labels:
        app: homework-app
    spec:
      volumes:
        - name: shared-volume
          emptyDir: {}

      containers:
        - name: web-server
          image: python:alpine
          ports:
            - containerPort: 8000
          command: ["sh", "-c", "cd /homework && python -m http.server 8000"]
          volumeMounts:
            - name: shared-volume
              mountPath: /homework
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm -f /homework/index.html"]
          readinessProbe:
            httpGet:
              path: /index.html
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5
